fix keyboard hint overflowing

--- a/src/index.css
+++ b/src/index.css
@@ -107,7 +107,7 @@ html, body {
   border: 0;
   background: transparent;
   outline: none;
-  flex: 1;
+  width: 100%;
   font-size: 14px;
   line-height: 20px;
 }
